Oops fix input value hiding behind suffix, etc.

--- a/src/tailwind/mx-input/index.scss
+++ b/src/tailwind/mx-input/index.scss
@@ -60,8 +60,6 @@
     }
 
     .icon-suffix {
-      background: var(--mds-bg-input);
-
       .suffix,
       .character-count {
         color: var(--mds-text-input-label);
